# nexus-gate

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  docker-compose.prod.yml  docker-compose.yml
configs/: default.toml
deploy/: Caddyfile
docs/: architecture.md  fingerprint-checklist.md
migrations/: 20260410000000_init.sql  20260411000000_admin_and_settings.sql  20260412000000_full_alignment.sql
scripts/: verify-deploy.sh
src/: config.rs  error.rs  lib.rs  main.rs  server.rs  state.rs
src/api/: admin.rs  admin_accounts.rs  claude.rs  gemini.rs  health.rs  mod.rs  openai.rs
src/fingerprint/: engine.rs  headers.rs  mod.rs  profile.rs  tls.rs
src/middleware/: admin_auth.rs  auth.rs  mod.rs  rate_limit.rs  request_id.rs
src/model/: account.rs  apikey.rs  mod.rs  types.rs  usage.rs
src/repo/: account.rs  apikey.rs  cache.rs  mod.rs  usage.rs
src/service/: account.rs  apikey.rs  cost.rs  mod.rs  relay.rs  scheduler.rs  session.rs
src/util/: crypto.rs  mask.rs  mod.rs  proxy.rs  stream.rs
tests/: e2e_test.rs  parity_test.rs
web/admin-spa/: index.html  package-lock.json  package.json  vite.config.js
web/admin-spa/src/: App.vue  main.js
web/admin-spa/src/assets/: main.css
web/admin-spa/src/router/: index.js
web/admin-spa/src/stores/: accounts.js  apiKeys.js  apistats.js  auth.js  dashboard.js  fingerprints.js  settings.js  theme.js
web/admin-spa/src/utils/: api.js  request.js
web/admin-spa/src/views/: AccountUsageRecordsView.vue  AccountsView.vue  ApiKeysView.vue  ApiStatsView.vue  BalanceScriptsView.vue  DashboardView.vue  FingerprintsView.vue  LoginView.vue  QuotaCardsView.vue  RequestDetailsView.vue  SettingsView.vue  UsageView.vue  (+1 more)
(+6 files in other folders)
